--- a/bedrock/security/templates/security/web-bug-bounty.html
+++ b/bedrock/security/templates/security/web-bug-bounty.html
@@ -51,7 +51,7 @@ If necessary, please write bug reports in your native language rather than using
       <h3>What is the step-by-step exploit process?</h3>
       <p>Please describe the multi-step process required, step by step, in the right order. If there are multiple parties involved, please describe them all clearly. For example:</p>
       <ol>
-      <li>Visit the url https://xyz.firefox.com/somepage/form?name=value&name2=value2
+      <li>Visit the url https://xyz.firefox.com/somepage/form?name=value&name2=value2</li>
       <li>Login</li>
       <li>Click the “Frobozz” button</li>
       <li>Place order for “Anti-Grue Cream” to shipping location “small mailbox,” continue navigation to the Shipping Address page.</li>
