Fix Bug 1255964 - Firefox wordmark on the channel page doesn't get inverted

--- a/bedrock/firefox/templates/firefox/channel.html
+++ b/bedrock/firefox/templates/firefox/channel.html
@@ -35,7 +35,7 @@
   'width': '185',
   'height': '70',
   'data-inverse-src': static('img/firefox/template/header-logo-inverse.png'),
-  'data-inverse-high-res-src': static('img/firefox/template/header-logo-inverse-high-res.png'),
+  'data-inverse-srcset': '%s 1.5x'|format(static('img/firefox/template/header-logo-inverse-high-res.png')),
 }) }}</a></h2>
 {% endblock %}
 
