[bug 1248040] Update GTM data attributes on whatsnew templates navigation, CTA, and footer

--- a/bedrock/firefox/templates/firefox/whatsnew_42/learnmore.html
+++ b/bedrock/firefox/templates/firefox/whatsnew_42/learnmore.html
@@ -22,7 +22,7 @@
 {% block up_to_date_message %}{% endblock %}
 
 {% block main_subhead %}
-  <a class="button-flat-dark" href="{{ url('firefox.private-browsing') }}" data-highlight="privateWindow" role="button">{{ _('Try the new Private Browsing') }}</a>
+  <a class="button-flat-dark" href="{{ url('firefox.private-browsing') }}" data-highlight="privateWindow" role="button" data-link-type="button" data-link-name="Try the new Private Browsing">{{ _('Try the new Private Browsing') }}</a>
 {% endblock %}
 
 {% block private_browsing_cta %}
