--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -25,12 +25,6 @@
 <![endif]-->
 {% endblock %}
 
-{% block optimizely %}
-  {% if waffle.switch('firefox-products-optimizely') %}
-     {% include 'includes/optimizely.html' %}
-  {% endif %}
-{% endblock %}
-
 {% block body_class %}mozid{% endblock %}
 
 {% block site_header %}
@@ -160,16 +154,16 @@
 {% endblock %}
 
 {% block email_form %}
-  {% if LANG.startswith('en-') %}
-  <aside id="newsletter-subscribe" class="ga-section" data-ga-label="All things Firefox. Sent right to your inbox.">
+  <aside id="newsletter-subscribe" class="ga-section" data-ga-label="Keep up with all things Firefox.">
     <div class="content container">
-      <header>
-        <h3>{{ _('All things Firefox.<br> Sent right to your inbox.') }}</h3>
-      </header>
-      {{ email_newsletter_form(title=' ') }}
+      {% if LANG.startswith('en-') %}
+        {# L10n: Line break for visual formatting. #}
+        {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.')) }}
+      {% else %}
+        {{ email_newsletter_form(title=_('Get Firefox news')) }}
+      {% endif %}
     </div>
   </aside>
-  {% endif %}
 {% endblock %}
 
 {% block site_footer %}
