Fix Bug 1256668, update newsletter button styles site wide

--- a/bedrock/mozorg/templates/mozorg/contribute/signup.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/signup.html
@@ -164,7 +164,7 @@
           <label class="inline" for="id_newsletter">
             {{ form.newsletter }}
             {{ form.newsletter.errors }}
-            {{ _('Sign me up for community updates') }}
+            {{ _('Sign up now for community updates') }}
             {% if not LANG.startswith('en') %}{{ _('(English)') }}{% endif %}
           </label>
         </p>
